# sto-crm

./: .gitignore  README.md  STO_CRM.spec  audit_report.md  build.ps1  check_whitespace.py  eslint.config.js  fix_future.py  latest.json  main.py  package.json  pre-commit-hook.bat  pre-commit-hook.sh  pyproject.toml  requirements-dev.txt  sto_crm.py  structure.md  update_css_vars.py  update_html.py  update_js.py  update_python.py  update_python_10.py  update_python_2.py  update_python_7.py  update_python_8.py  update_python_9.py  update_ui.py  update_ui_17.py  update_ui_18.py  update_ui_19.py  update_ui_2.py  update_ui_20.py  update_ui_21.py  update_ui_3.py  update_ui_4.py  update_ui_5.py  update_ui_6.py
sto_crm/: __init__.py  __main__.py  backup.py  catalog.py  cli.py  config.py  database.py  export.py  filesystem_safety.py  http_server.py  logging_config.py  parts_service.py  printing.py  queries.py  reports.py  runtime.py  seed.py  services.py  updates.py  validation.py  web.py
tests/: _frontend_contracts.js  check_frontend_contracts.py  conftest.py  test_analytics_charts.py  test_api_base.py  test_audio_feedback.py  test_audit_hardening.py  test_bundle_scaffold.py  test_catalog_expand.py  test_catalog_performance.py  test_cli_coverage.py  test_command_palette_virtualization.py  test_config_env.py  test_coverage_edge.py  test_coverage_edge_cases.py  test_coverage_gap_filler.py  test_customer_validation.py  test_database_locks.py  test_export_extra.py  test_frontend_js_static.py  test_http_extra.py  test_indexeddb_offline.py  test_keyboard_navigation_tabs.py  (+32 more)
(+44 files in other folders)
