[project]
name = "crm"
version = "1.17.2"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py313"
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["sto_crm"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_also = [
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "playwright>=1.60.0",
    "ruff>=0.15.17",
]
